--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "private": false,
   "scripts": {
     "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo build"
   },
   "dependencies": {
     "express": "^4.18.2"
